--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,13 @@
 version: 2
 jobs:
-  install:
+  build:
     docker:
       - image: circleci/node:10
     steps:
       - checkout
       - run: yarn
       - run: yarn run install:pkgs
+      - run: yarn run build:all
   check:
     docker:
       - image: circleci/node:10
