fix: reference cli tool directly because yarn incorrectly symlinks it before it is built

--- a/package.json
+++ b/package.json
@@ -34,24 +34,25 @@
   "repository": "https://github.com/psirenny/monorepo",
   "scripts": {
     "audit:self": "nsp check",
-    "build:all": "npm-run-all build:pkgs",
+    "build": "npm-run-all build:pkgs",
     "build:pkgs": "lerna run build",
-    "check:all": "npm-run-all check:self check:pkgs",
+    "check": "npm-run-all check:self check:pkgs",
     "check:pkgs": "lerna run check",
     "check:self": "npm-run-all audit:self fixpack:self lint:self",
-    "clean:all": "npm-run-all clean:pkgs clean:self",
+    "clean": "npm-run-all clean:pkgs clean:self",
     "clean:pkgs": "lerna run clean",
     "clean:self": "trash *.log node_modules",
     "commitmsg": "validate-commit-msg",
     "fixpack:self": "fixpack",
     "flow-fix": "flow-mono create-symlinks ./build/.flowconfig",
-    "install:pkgs": "lerna bootstrap && yarn run flow-fix",
+    "install:pkgs": "npm-run-all lerna:bootstrap flow-fix",
+    "lerna:bootstrap": "lerna bootstrap",
     "lint:self": "remark **.md",
-    "outdated:all": "npm-run-all outdated:self outdated:pkgs",
+    "outdated": "npm-run-all outdated:self outdated:pkgs",
     "outdated:pkgs": "lerna run outdated",
     "outdated:self": "ncu",
     "release": "standard-version",
-    "update:all": "npm-run-all update:self update:pkgs",
+    "update": "npm-run-all update:self update:pkgs",
     "update:pkgs": "lerna run update",
     "update:self": "ncu -u"
   },
