--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
       - run: yarn run check
 workflows:
   version: 2
-  build_and_test:
+  build_and_check:
     jobs:
       - build
-      - check
+      - check:
         requires:
           - build
