--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2
 jobs:
-  build:
+  build_and_check:
+    working_directory: ~/tmp
     docker:
       - image: circleci/node:10
     steps:
@@ -8,17 +9,9 @@ jobs:
       - run: yarn
       - run: yarn run install:pkgs
       - run: yarn run build
-  check:
-    docker:
-      - image: circleci/node:10
-    steps:
-      - checkout
       - run: yarn run check
 workflows:
   version: 2
   build_and_check:
     jobs:
-      - build
-      - check:
-        requires:
-          - build
+      - build_and_check
