chore: update package keywords

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -41,9 +41,9 @@
   "keywords": [
     "config",
     "eslint",
-    "exo",
+    "guide",
     "js",
-    "native",
+    "psirenny",
     "style"
   ],
   "license": "Unlicense",
