--- a/packages/remark-preset/package.json
+++ b/packages/remark-preset/package.json
@@ -67,11 +67,11 @@
   },
   "homepage": "https://github.com/psirenny/monorepo/tree/master/packages/remark-preset",
   "keywords": [
-    "exo",
+    "guide",
     "lint",
     "markdown",
-    "native",
     "preset",
+    "psirenny",
     "remark",
     "style"
   ],
