chore: do not lint markdown within packages that the markdown style depends on

--- a/packages/remark-preset/package.json
+++ b/packages/remark-preset/package.json
@@ -110,7 +110,7 @@
     "fixpack": "fixpack",
     "lint": "npm-run-all lint:js lint:md",
     "lint:js": "eslint . --ext .js,.md",
-    "lint:md": "remark .",
+    "lint:md": "remark --frail .",
     "outdated": "ncu",
     "typecheck": "flow check",
     "update": "ncu -u"
