--- a/packages/retext-preset/package.json
+++ b/packages/retext-preset/package.json
@@ -13,7 +13,6 @@
     "@babel/preset-flow": "7.0.0-beta.51",
     "@babel/preset-stage-0": "7.0.0-beta.51",
     "@psirenny/eslint-config": "1.0.0",
-    "@psirenny/retext-preset": "1.0.0",
     "@psirenny/tools": "1.0.0",
     "babel-eslint": "8.2.3",
     "dictionary-en-us": "2.0.0",
@@ -98,9 +97,7 @@
     "clean": "trash dist node_modules",
     "fix": "npm-run-all fixpack",
     "fixpack": "fixpack",
-    "lint": "npm-run-all lint:js lint:md",
-    "lint:js": "eslint . --ext .js,.md",
-    "lint:md": "remark .",
+    "lint": "eslint . --ext .js,.md",
     "outdated": "ncu",
     "typecheck": "flow check",
     "update": "ncu -u"
