--- a/packages/remark-preset/package.json
+++ b/packages/remark-preset/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@psirenny/remark-preset",
   "description": "psirenny remark config",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "Dennis Torres <djtorres0@gmail.com>",
   "bugs": {
     "url": "https://github.com/psirenny/monorepo/issues"
@@ -12,9 +12,9 @@
     "@babel/preset-env": "7.0.0-beta.51",
     "@babel/preset-flow": "7.0.0-beta.51",
     "@babel/preset-stage-0": "7.0.0-beta.51",
-    "@psirenny/eslint-config": "1.0.0",
-    "@psirenny/retext-preset": "1.0.0",
-    "@psirenny/tools": "1.0.0",
+    "@psirenny/eslint-config": "^1.0.1",
+    "@psirenny/retext-preset": "^1.0.1",
+    "@psirenny/tools": "^1.0.1",
     "babel-eslint": "8.2.5",
     "dictionary-en-us": "2.0.0",
     "eslint": "4.19.1",
