chore: add gitHead to packages

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -37,6 +37,7 @@
     "retext-syntax-urls": "1.0.0",
     "trash-cli": "1.4.0"
   },
+  "gitHead": "11b63ee7b482365e4b52ca837a5dc6e63adf197b",
   "homepage": "https://github.com/psirenny/monorepo/tree/master/packages/eslint-config",
   "keywords": [
     "config",
