--- a/packages/remark-preset/package.json
+++ b/packages/remark-preset/package.json
@@ -65,6 +65,7 @@
     "trash-cli": "1.4.0",
     "unified": "7.0.0"
   },
+  "gitHead": "11b63ee7b482365e4b52ca837a5dc6e63adf197b",
   "homepage": "https://github.com/psirenny/monorepo/tree/master/packages/remark-preset",
   "keywords": [
     "guide",
