--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -77,6 +77,7 @@
     "retext-syntax-urls": "1.0.0",
     "trash-cli": "1.4.0"
   },
+  "gitHead": "11b63ee7b482365e4b52ca837a5dc6e63adf197b",
   "homepage": "https://github.com/psirenny/monorepo/tree/master/packages/tools",
   "keywords": [
     "build",
