--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,8 @@
       "rejectCycles": true
     },
     "publish": {
-      "allowBranch": "master"
+      "allowBranch": "master",
+      "conventionalCommits": true
     }
   },
   "npmClient": "yarn",
