--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "fixpack": "2.3.1",
     "flow-mono-cli": "1.3.4",
     "greenkeeper-lockfile": "2.2.0",
-    "husky": "1.0.0-rc.9",
-    "lerna": "3.0.0-beta.21",
+    "husky": "1.0.0-rc.13",
+    "lerna": "3.0.6",
     "npm-check-updates": "3.0.0-alpha.3",
     "npm-run-all": "4.1.3",
     "nsp": "3.2.1",
