--- a/packages/retext-preset/package.json
+++ b/packages/retext-preset/package.json
@@ -14,17 +14,18 @@
     "@babel/preset-stage-0": "7.0.0-beta.51",
     "@psirenny/eslint-config": "^1.0.2",
     "@psirenny/tools": "^1.0.2",
-    "babel-eslint": "8.2.5",
+    "babel-eslint": "8.2.6",
     "dictionary-en-us": "2.0.0",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb-base": "13.0.0",
-    "eslint-plugin-ava": "4.5.1",
+    "eslint": "5.3.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-ava": "5.1.0",
     "eslint-plugin-babel": "5.1.0",
-    "eslint-plugin-flowtype": "2.49.3",
-    "eslint-plugin-import": "2.12.0",
+    "eslint-plugin-flowtype": "2.50.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-markdown": "1.0.0-beta.6",
     "fixpack": "2.3.1",
-    "flow-bin": "0.75.0",
+    "flow-bin": "0.79.0",
     "npm-check-updates": "3.0.0-alpha.3",
     "npm-run-all": "4.1.3",
     "nsp": "3.2.1",
@@ -33,7 +34,7 @@
     "retext-contractions": "2.1.2",
     "retext-diacritics": "1.2.1",
     "retext-english": "3.0.0",
-    "retext-equality": "3.3.0",
+    "retext-equality": "3.4.0",
     "retext-indefinite-article": "1.1.4",
     "retext-intensify": "3.0.1",
     "retext-passive": "1.3.0",
@@ -68,7 +69,7 @@
     "retext-contractions": "2.1.2",
     "retext-diacritics": "1.2.1",
     "retext-english": "3.0.0",
-    "retext-equality": "3.3.0",
+    "retext-equality": "3.4.0",
     "retext-indefinite-article": "1.1.4",
     "retext-intensify": "3.0.1",
     "retext-passive": "1.3.0",
@@ -94,7 +95,7 @@
   "scripts": {
     "audit": "nsp check",
     "build": "node_modules/@psirenny/tools/dist/node/6.14.2/cjs/debug/code/cli.js build --platforms node",
-    "check": "npm-run-all audit fixpack typecheck build lint",
+    "check": "npm-run-all audit build fixpack typecheck lint",
     "clean": "trash dist node_modules",
     "fix": "npm-run-all fixpack",
     "fixpack": "fixpack",
