--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -12,17 +12,17 @@
   "dependencies": {
     "@babel/polyfill": "7.0.0-beta.51",
     "async": "2.6.1",
-    "browserslist": "4.0.0",
-    "fs-extra": "6.0.1",
-    "klaw": "2.1.1",
+    "browserslist": "4.0.2",
+    "fs-extra": "7.0.0",
+    "klaw": "3.0.0",
     "lodash": "4.17.10",
-    "rollup": "0.62.0",
+    "rollup": "0.64.1",
     "rollup-plugin-babel": "4.0.0-beta.4",
     "rollup-plugin-hashbang": "1.0.1",
     "rollup-plugin-replace": "2.0.0",
     "rollup-plugin-string": "2.0.2",
     "rollup-plugin-uglify": "4.0.0",
-    "terser": "3.7.6",
+    "terser": "3.8.1",
     "uglify-es": "3.3.9",
     "yargs": "12.0.1"
   },
@@ -35,20 +35,20 @@
     "@babel/preset-flow": "7.0.0-beta.51",
     "@babel/preset-stage-0": "7.0.0-beta.51",
     "@psirenny/eslint-config": "^1.0.2",
-    "babel-eslint": "8.2.5",
+    "babel-eslint": "8.2.6",
     "babel-plugin-unassert": "2.1.2",
     "babel-preset-power-assert": "3.0.0-beta.1",
     "dictionary-en-us": "2.0.0",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb-base": "13.0.0",
-    "eslint-plugin-ava": "4.5.1",
+    "eslint": "5.3.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-ava": "5.1.0",
     "eslint-plugin-babel": "5.1.0",
-    "eslint-plugin-flowtype": "2.49.3",
-    "eslint-plugin-import": "2.12.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-flowtype": "2.50.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-markdown": "1.0.0-beta.6",
     "fixpack": "2.3.1",
-    "flow-bin": "0.75.0",
+    "flow-bin": "0.79.0",
     "npm-check-updates": "3.0.0-alpha.3",
     "npm-run-all": "4.1.3",
     "nsp": "3.2.1",
@@ -60,7 +60,7 @@
     "retext-contractions": "2.1.2",
     "retext-diacritics": "1.2.1",
     "retext-english": "3.0.0",
-    "retext-equality": "3.3.0",
+    "retext-equality": "3.4.0",
     "retext-indefinite-article": "1.1.4",
     "retext-intensify": "3.0.1",
     "retext-passive": "1.3.0",
@@ -97,7 +97,7 @@
   "scripts": {
     "audit": "nsp check",
     "build": "babel-node src/code/cli build --platforms node",
-    "check": "npm-run-all audit fixpack lint typecheck",
+    "check": "npm-run-all audit build fixpack lint typecheck",
     "clean": "trash dist node_modules",
     "fix": "npm-run-all fixpack",
     "fixpack": "fixpack",
