--- a/packages/retext-preset/package.json
+++ b/packages/retext-preset/package.json
@@ -1,19 +1,35 @@
 {
   "name": "@psirenny/retext-preset",
-  "description": "psirenny remark config",
+  "description": "psirenny's remark config",
   "version": "1.0.2",
   "author": "Dennis Torres <djtorres0@gmail.com>",
   "bugs": {
     "url": "https://github.com/psirenny/monorepo/issues"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.51",
-    "@babel/plugin-external-helpers": "7.0.0-beta.51",
-    "@babel/preset-env": "7.0.0-beta.51",
-    "@babel/preset-flow": "7.0.0-beta.51",
-    "@babel/preset-stage-0": "7.0.0-beta.51",
-    "@psirenny/eslint-config": "^1.0.2",
-    "@psirenny/tools": "^1.0.2",
+    "@babel/core": "7.0.0-rc.1",
+    "@babel/plugin-external-helpers": "7.0.0-rc.1",
+    "@babel/plugin-proposal-class-properties": "7.0.0-rc.1",
+    "@babel/plugin-proposal-decorators": "7.0.0-rc.1",
+    "@babel/plugin-proposal-do-expressions": "7.0.0-rc.1",
+    "@babel/plugin-proposal-export-default-from": "7.0.0-rc.1",
+    "@babel/plugin-proposal-export-namespace-from": "7.0.0-rc.1",
+    "@babel/plugin-proposal-function-bind": "7.0.0-rc.1",
+    "@babel/plugin-proposal-function-sent": "7.0.0-rc.1",
+    "@babel/plugin-proposal-json-strings": "7.0.0-rc.1",
+    "@babel/plugin-proposal-logical-assignment-operators": "7.0.0-rc.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0-rc.1",
+    "@babel/plugin-proposal-numeric-separator": "7.0.0-rc.1",
+    "@babel/plugin-proposal-optional-chaining": "7.0.0-rc.1",
+    "@babel/plugin-proposal-pipeline-operator": "7.0.0-rc.1",
+    "@babel/plugin-proposal-throw-expressions": "7.0.0-rc.1",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0-rc.1",
+    "@babel/plugin-syntax-import-meta": "7.0.0-rc.1",
+    "@babel/preset-env": "7.0.0-rc.1",
+    "@babel/preset-flow": "7.0.0-rc.1",
+    "@psirenny/babel-preset": "1.0.0",
+    "@psirenny/eslint-config": "1.0.2",
+    "@psirenny/tools": "1.0.2",
     "babel-eslint": "8.2.6",
     "dictionary-en-us": "2.0.0",
     "eslint": "5.3.0",
@@ -95,7 +111,7 @@
   "scripts": {
     "audit": "nsp check",
     "build": "node_modules/@psirenny/tools/dist/node/6.14.2/cjs/debug/code/cli.js build --platforms node",
-    "check": "npm-run-all audit build fixpack typecheck lint",
+    "check": "npm-run-all audit fixpack typecheck lint",
     "clean": "trash dist node_modules",
     "fix": "npm-run-all fixpack",
     "fixpack": "fixpack",
