--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@psirenny/tools",
-  "description": "psirenny tools",
+  "description": "psirenny's tools",
   "version": "1.0.2",
   "author": "Dennis Torres <djtorres0@gmail.com>",
   "bin": {
@@ -10,7 +10,7 @@
     "url": "https://github.com/psirenny/monorepo/issues"
   },
   "dependencies": {
-    "@babel/polyfill": "7.0.0-beta.51",
+    "@babel/polyfill": "7.0.0-rc.1",
     "async": "2.6.1",
     "browserslist": "4.0.2",
     "fs-extra": "7.0.0",
@@ -27,14 +27,30 @@
     "yargs": "12.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0-beta.51",
-    "@babel/core": "7.0.0-beta.51",
-    "@babel/node": "7.0.0-beta.51",
-    "@babel/plugin-external-helpers": "7.0.0-beta.51",
-    "@babel/preset-env": "7.0.0-beta.51",
-    "@babel/preset-flow": "7.0.0-beta.51",
-    "@babel/preset-stage-0": "7.0.0-beta.51",
-    "@psirenny/eslint-config": "^1.0.2",
+    "@babel/cli": "7.0.0-rc.1",
+    "@babel/core": "7.0.0-rc.1",
+    "@babel/node": "7.0.0-rc.1",
+    "@babel/plugin-external-helpers": "7.0.0-rc.1",
+    "@babel/plugin-proposal-class-properties": "7.0.0-rc.1",
+    "@babel/plugin-proposal-decorators": "7.0.0-rc.1",
+    "@babel/plugin-proposal-do-expressions": "7.0.0-rc.1",
+    "@babel/plugin-proposal-export-default-from": "7.0.0-rc.1",
+    "@babel/plugin-proposal-export-namespace-from": "7.0.0-rc.1",
+    "@babel/plugin-proposal-function-bind": "7.0.0-rc.1",
+    "@babel/plugin-proposal-function-sent": "7.0.0-rc.1",
+    "@babel/plugin-proposal-json-strings": "7.0.0-rc.1",
+    "@babel/plugin-proposal-logical-assignment-operators": "7.0.0-rc.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0-rc.1",
+    "@babel/plugin-proposal-numeric-separator": "7.0.0-rc.1",
+    "@babel/plugin-proposal-optional-chaining": "7.0.0-rc.1",
+    "@babel/plugin-proposal-pipeline-operator": "7.0.0-rc.1",
+    "@babel/plugin-proposal-throw-expressions": "7.0.0-rc.1",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0-rc.1",
+    "@babel/plugin-syntax-import-meta": "7.0.0-rc.1",
+    "@babel/preset-env": "7.0.0-rc.1",
+    "@babel/preset-flow": "7.0.0-rc.1",
+    "@psirenny/babel-preset": "1.0.0",
+    "@psirenny/eslint-config": "1.0.2",
     "babel-eslint": "8.2.6",
     "babel-plugin-unassert": "2.1.2",
     "babel-preset-power-assert": "3.0.0-beta.1",
@@ -97,7 +113,7 @@
   "scripts": {
     "audit": "nsp check",
     "build": "babel-node src/code/cli build --platforms node",
-    "check": "npm-run-all audit build fixpack lint typecheck",
+    "check": "npm-run-all audit fixpack lint typecheck",
     "clean": "trash dist node_modules",
     "fix": "npm-run-all fixpack",
     "fixpack": "fixpack",
