--- a/packages/retext-preset/.babelrc
+++ b/packages/retext-preset/.babelrc
@@ -1,7 +1,5 @@
 {
   "presets": [
-    ["@babel/preset-env"],
-    ["@babel/preset-flow"],
-    ["@babel/preset-stage-0", { "decoratorsLegacy": true }]
+    ["@psirenny/babel-preset"]
   ]
 }
