--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/psirenny/psirenny/issues"
   },
   "devDependencies": {
+    "commitlint": "7.0.0",
     "fixpack": "2.3.1",
     "flow-mono-cli": "1.3.4",
     "greenkeeper-lockfile": "2.4.0",
@@ -20,8 +21,7 @@
     "remark-preset-lint-markdown-style-guide": "2.1.2",
     "remark-preset-lint-recommended": "3.0.2",
     "standard-version": "4.4.0",
-    "trash-cli": "1.4.0",
-    "validate-commit-msg": "2.14.0"
+    "trash-cli": "1.4.0"
   },
   "homepage": "https://github.com/psirenny/monorepo",
   "keywords": [
