--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "https://github.com/psirenny/psirenny/issues"
   },
   "devDependencies": {
-    "commitlint": "7.0.0",
+    "@commitlint/cli": "7.0.0",
+    "@commitlint/config-lerna-scopes": "7.0.0",
     "fixpack": "2.3.1",
     "flow-mono-cli": "1.3.4",
     "greenkeeper-lockfile": "2.4.0",
