--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@commitlint/cli": "7.0.0",
-    "@commitlint/config-lerna-scopes": "7.0.0",
+    "@commitlint/config-conventional": "7.0.1",
     "fixpack": "2.3.1",
     "flow-mono-cli": "1.3.4",
     "greenkeeper-lockfile": "2.4.0",
@@ -38,6 +38,7 @@
     "audit:self": "nsp check",
     "build": "npm-run-all build:pkgs",
     "build:pkgs": "lerna run build",
+    "foo": "echo 'foo' | commitlint",
     "check": "npm-run-all check:self check:pkgs",
     "check:pkgs": "lerna run check",
     "check:self": "npm-run-all audit:self fixpack:self lint:self",
