fix: set git email and name in circleci pull requests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,8 @@ jobs:
     docker:
       - image: circleci/node:10
     steps:
+      - git config --global user.email 'support@greenkeeper.io'
+      - git config --global user.name 'greenkeeperio-bot'
       - checkout
       - run: yarn
       - run: yarn run install:pkgs
