--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,15 +4,13 @@ jobs:
     docker:
       - image: circleci/node:10
     steps:
-      - run: export GK_LOCK_COMMIT_EMAIL=support@greenkeeper.io
-      - run: export GK_LOCK_COMMIT_NAME=greenkeeperio-bot
       - checkout
       - run: yarn
       - run: yarn run install:pkgs
       - run: yarn run build
-      - run: yarn run ci:precheck
+      - run: ./node_modules/.bin/greenkeeper-lockfile-update
       - run: yarn run check
-      - run: yarn run ci:postcheck
+      - run: ./node_modules/.bin/greenkeeper-lockfile-upload
 workflows:
   version: 2
   build_and_check:
