--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -14,17 +14,17 @@
     "async": "2.6.1",
     "babel-plugin-unassert": "2.1.2",
     "babel-preset-power-assert": "3.0.0",
-    "browserslist": "4.1.0",
+    "browserslist": "4.1.1",
     "fs-extra": "7.0.0",
     "klaw": "3.0.0",
     "lodash": "4.17.10",
-    "rollup": "0.65.0",
+    "rollup": "0.65.1",
     "rollup-plugin-alias": "1.4.0",
-    "rollup-plugin-babel": "4.0.2",
+    "rollup-plugin-babel": "4.0.3",
     "rollup-plugin-commonjs": "9.1.6",
     "rollup-plugin-hashbang": "1.0.1",
     "rollup-plugin-json": "3.0.0",
-    "rollup-plugin-node-resolve": "3.3.0",
+    "rollup-plugin-node-resolve": "3.4.0",
     "rollup-plugin-replace": "2.0.0",
     "rollup-plugin-string": "2.0.2",
     "rollup-plugin-terser": "2.0.2",
@@ -75,9 +75,20 @@
     "npm-run-all": "4.1.3",
     "nsp": "3.2.1",
     "remark-cli": "5.0.0",
+    "remark-lint-blockquote-indentation": "1.0.2",
+    "remark-lint-checkbox-character-style": "1.0.2",
+    "remark-lint-code-block-style": "1.0.2",
+    "remark-lint-emphasis-marker": "1.0.2",
+    "remark-lint-fenced-code-marker": "1.0.2",
+    "remark-lint-heading-style": "1.0.2",
+    "remark-lint-link-title-style": "1.0.2",
+    "remark-lint-rule-style": "1.0.2",
+    "remark-lint-strong-marker": "1.0.2",
+    "remark-lint-table-cell-padding": "1.0.2",
     "remark-preset-lint-consistent": "2.0.2",
     "remark-preset-lint-markdown-style-guide": "2.1.2",
     "remark-preset-lint-recommended": "3.0.2",
+    "remark-retext": "3.1.1",
     "retext-assuming": "1.0.0",
     "retext-contractions": "2.1.2",
     "retext-diacritics": "1.2.1",
@@ -96,7 +107,8 @@
     "retext-spell": "2.3.1",
     "retext-syntax-mentions": "1.1.4",
     "retext-syntax-urls": "1.0.0",
-    "trash-cli": "1.4.0"
+    "trash-cli": "1.4.0",
+    "unified": "7.0.0"
   },
   "gitHead": "11b63ee7b482365e4b52ca837a5dc6e63adf197b",
   "homepage": "https://github.com/psirenny/monorepo/tree/master/packages/tools",
@@ -119,7 +131,7 @@
     "audit": "nsp check",
     "build": "./src/code/cli.babel.js build --bootstrap --platform-aliases node",
     "check": "npm-run-all audit fixpack lint typecheck",
-    "clean": "trash dist node_modules",
+    "clean": "trash **.DS_Store *.log dist node_modules",
     "fix": "npm-run-all fixpack",
     "fixpack": "fixpack",
     "lint": "npm-run-all lint:js lint:md",
