--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -47,9 +47,20 @@
     "npm-run-all": "4.1.3",
     "nsp": "3.2.1",
     "remark-cli": "5.0.0",
+    "remark-lint-blockquote-indentation": "1.0.2",
+    "remark-lint-checkbox-character-style": "1.0.2",
+    "remark-lint-code-block-style": "1.0.2",
+    "remark-lint-emphasis-marker": "1.0.2",
+    "remark-lint-fenced-code-marker": "1.0.2",
+    "remark-lint-heading-style": "1.0.2",
+    "remark-lint-link-title-style": "1.0.2",
+    "remark-lint-rule-style": "1.0.2",
+    "remark-lint-strong-marker": "1.0.2",
+    "remark-lint-table-cell-padding": "1.0.2",
     "remark-preset-lint-consistent": "2.0.2",
     "remark-preset-lint-markdown-style-guide": "2.1.2",
     "remark-preset-lint-recommended": "3.0.2",
+    "remark-retext": "3.1.1",
     "retext-assuming": "1.0.0",
     "retext-contractions": "2.1.2",
     "retext-diacritics": "1.2.1",
@@ -68,7 +79,8 @@
     "retext-spell": "2.3.1",
     "retext-syntax-mentions": "1.1.4",
     "retext-syntax-urls": "1.0.0",
-    "trash-cli": "1.4.0"
+    "trash-cli": "1.4.0",
+    "unified": "7.0.0"
   },
   "gitHead": "11b63ee7b482365e4b52ca837a5dc6e63adf197b",
   "homepage": "https://github.com/psirenny/monorepo/tree/master/packages/eslint-config",
@@ -101,7 +113,7 @@
     "audit": "nsp check",
     "build": "../tools/dist/node/tag/maintenance/cjs/debug/code/cli.js build --platform-aliases node",
     "check": "npm-run-all audit fixpack",
-    "clean": "trash node_modules",
+    "clean": "trash **.DS_Store *.log dist node_modules",
     "fix": "npm-run-all fixpack",
     "fixpack": "fixpack",
     "lint": "npm-run-all lint:js lint:md",
