--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["@commitlint/config-conventional"]
+  "extends": [
+    "@commitlint/config-lerna-scopes",
+    "@commitlint/config-conventional"
+  ]
 }
