--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "url": "https://github.com/psirenny/psirenny/issues"
   },
   "devDependencies": {
-    "@commitlint/cli": "7.1.1",
-    "@commitlint/config-conventional": "7.1.1",
+    "@commitlint/cli": "7.1.2",
+    "@commitlint/config-conventional": "7.1.2",
+    "@commitlint/config-lerna-scopes": "7.1.2",
     "fixpack": "2.3.1",
     "flow-mono-cli": "1.3.4",
     "greenkeeper-lockfile": "2.5.0",
@@ -45,7 +46,7 @@
     "ci:precheck": "greenkeeper-lockfile-update",
     "clean": "npm-run-all clean:pkgs clean:self",
     "clean:pkgs": "lerna run clean",
-    "clean:self": "trash *.log node_modules",
+    "clean:self": "trash **.DS_Store *.log node_modules",
     "fixpack:self": "fixpack",
     "flow-fix": "flow-mono create-symlinks ./build/.flowconfig",
     "install:pkgs": "npm-run-all lerna:bootstrap flow-fix",
