chore: remove greenkeeper hack from circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,9 @@ jobs:
       - run: yarn
       - run: yarn run install:pkgs
       - run: yarn run build
-      - run: ./node_modules/.bin/greenkeeper-lockfile-update
+      - run: yarn run ci:precheck
       - run: yarn run check
-      - run: ./node_modules/.bin/greenkeeper-lockfile-upload
+      - run: yarn run ci:postcheck
 workflows:
   version: 2
   build_and_check:
