--- a/package.json
+++ b/package.json
@@ -19,10 +19,40 @@
     "npm-run-all": "4.1.3",
     "nsp": "3.2.1",
     "remark-cli": "5.0.0",
+    "remark-lint-blockquote-indentation": "1.0.2",
+    "remark-lint-checkbox-character-style": "1.0.2",
+    "remark-lint-code-block-style": "1.0.2",
+    "remark-lint-emphasis-marker": "1.0.2",
+    "remark-lint-fenced-code-marker": "1.0.2",
+    "remark-lint-heading-style": "1.0.2",
+    "remark-lint-link-title-style": "1.0.2",
+    "remark-lint-rule-style": "1.0.2",
+    "remark-lint-strong-marker": "1.0.2",
+    "remark-lint-table-cell-padding": "1.0.2",
     "remark-preset-lint-consistent": "2.0.2",
     "remark-preset-lint-markdown-style-guide": "2.1.2",
     "remark-preset-lint-recommended": "3.0.2",
-    "trash-cli": "1.4.0"
+    "remark-retext": "3.1.1",
+    "retext-assuming": "1.0.0",
+    "retext-contractions": "2.1.2",
+    "retext-diacritics": "1.2.1",
+    "retext-english": "3.0.0",
+    "retext-equality": "3.4.1",
+    "retext-indefinite-article": "1.1.4",
+    "retext-intensify": "3.0.1",
+    "retext-passive": "1.3.0",
+    "retext-profanities": "4.4.0",
+    "retext-quotes": "2.0.1",
+    "retext-readability": "4.2.0",
+    "retext-redundant-acronyms": "1.2.1",
+    "retext-repeated-words": "1.2.1",
+    "retext-sentence-spacing": "2.0.1",
+    "retext-simplify": "4.1.1",
+    "retext-spell": "2.3.1",
+    "retext-syntax-mentions": "1.1.4",
+    "retext-syntax-urls": "1.0.0",
+    "trash-cli": "1.4.0",
+    "unified": "7.0.0"
   },
   "homepage": "https://github.com/psirenny/monorepo",
   "keywords": [
@@ -50,7 +80,7 @@
     "flow-fix": "flow-mono create-symlinks ./build/.flowconfig",
     "install:pkgs": "npm-run-all lerna:bootstrap flow-fix",
     "lerna:bootstrap": "lerna bootstrap",
-    "lint:self": "remark --frail README.md",
+    "lint:self": "remark --frail .",
     "outdated": "npm-run-all outdated:self outdated:pkgs",
     "outdated:pkgs": "lerna run outdated",
     "outdated:self": "ncu",
