chore: modify lerna version message to be compatible with commitlint

--- a/lerna.json
+++ b/lerna.json
@@ -10,7 +10,8 @@
     "version": {
       "allowBranch": "master",
       "conventionalCommits": true,
-      "exact": true
+      "exact": true,
+      "message": "chore: release"
     }
   },
   "npmClient": "yarn",
