--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -40,7 +40,7 @@
     "eslint-plugin-flowtype": "2.50.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-markdown": "1.0.0-beta.6",
+    "eslint-plugin-markdown": "1.0.0-beta.8",
     "fixpack": "2.3.1",
     "flow-bin": "0.80.0",
     "npm-check-updates": "3.0.0-alpha.3",
@@ -95,12 +95,12 @@
   "license": "Unlicense",
   "main": "dist/node/tag/maintenance/cjs/debug/index.js",
   "peerDependencies": {
-    "babel-eslint": "9.0.0",
-    "eslint-config-airbnb-base": "12.1.0",
-    "eslint-plugin-ava": "5.1.0",
-    "eslint-plugin-babel": "5.1.0",
-    "eslint-plugin-flowtype": "2.50.0",
-    "eslint-plugin-markdown": "1.0.0-beta.6"
+    "babel-eslint": "^9.0.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-ava": "^5.1.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-markdown": "^1.0.0-beta.8"
   },
   "publishConfig": {
     "access": "public"
