--- a/packages/remark-preset/package.json
+++ b/packages/remark-preset/package.json
@@ -41,7 +41,7 @@
     "eslint-plugin-flowtype": "2.50.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-markdown": "1.0.0-beta.6",
+    "eslint-plugin-markdown": "1.0.0-beta.8",
     "fixpack": "2.3.1",
     "flow-bin": "0.80.0",
     "npm-check-updates": "3.0.0-alpha.3",
@@ -96,21 +96,21 @@
   "license": "Unlicense",
   "main": "dist/node/tag/maintenance/cjs/debug/index.js",
   "peerDependencies": {
-    "@psirenny/retext-preset": "1.0.3",
-    "remark-lint-blockquote-indentation": "1.0.2",
-    "remark-lint-checkbox-character-style": "1.0.2",
-    "remark-lint-code-block-style": "1.0.2",
-    "remark-lint-emphasis-marker": "1.0.2",
-    "remark-lint-fenced-code-marker": "1.0.2",
-    "remark-lint-heading-style": "1.0.2",
-    "remark-lint-link-title-style": "1.0.2",
-    "remark-lint-rule-style": "1.0.2",
-    "remark-lint-strong-marker": "1.0.2",
-    "remark-lint-table-cell-padding": "1.0.2",
-    "remark-preset-lint-markdown-style-guide": "2.1.2",
-    "remark-preset-lint-recommended": "3.0.2",
-    "remark-retext": "3.1.1",
-    "unified": "7.0.0"
+    "@psirenny/retext-preset": "^1.1.0",
+    "remark-lint-blockquote-indentation": "^1.0.2",
+    "remark-lint-checkbox-character-style": "^1.0.2",
+    "remark-lint-code-block-style": "^1.0.2",
+    "remark-lint-emphasis-marker": "^1.0.2",
+    "remark-lint-fenced-code-marker": "^1.0.2",
+    "remark-lint-heading-style": "^1.0.2",
+    "remark-lint-link-title-style": "^1.0.2",
+    "remark-lint-rule-style": "^1.0.2",
+    "remark-lint-strong-marker": "^1.0.2",
+    "remark-lint-table-cell-padding": "^1.0.2",
+    "remark-preset-lint-markdown-style-guide": "^2.1.2",
+    "remark-preset-lint-recommended": "^3.0.2",
+    "remark-retext": "^3.1.1",
+    "unified": "^7.0.0"
   },
   "publishConfig": {
     "access": "public"
