--- a/packages/retext-preset/package.json
+++ b/packages/retext-preset/package.json
@@ -43,7 +43,7 @@
     "eslint-plugin-flowtype": "2.50.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-markdown": "1.0.0-beta.6",
+    "eslint-plugin-markdown": "1.0.0-beta.8",
     "fixpack": "2.3.1",
     "flow-bin": "0.80.0",
     "npm-check-updates": "3.0.0-alpha.3",
@@ -99,25 +99,25 @@
   "license": "Unlicense",
   "main": "dist/node/tag/maintenance/cjs/debug/index.js",
   "peerDependencies": {
-    "dictionary-en-us": "2.0.0",
-    "retext-assuming": "1.0.0",
-    "retext-contractions": "2.1.2",
-    "retext-diacritics": "1.2.1",
-    "retext-english": "3.0.0",
-    "retext-equality": "3.4.1",
-    "retext-indefinite-article": "1.1.4",
-    "retext-intensify": "3.0.1",
-    "retext-passive": "1.3.0",
-    "retext-profanities": "4.4.0",
-    "retext-quotes": "2.0.1",
-    "retext-readability": "4.2.0",
-    "retext-redundant-acronyms": "1.2.1",
-    "retext-repeated-words": "1.2.1",
-    "retext-sentence-spacing": "2.0.1",
-    "retext-simplify": "4.1.1",
-    "retext-spell": "2.3.1",
-    "retext-syntax-mentions": "1.1.4",
-    "retext-syntax-urls": "1.0.0"
+    "dictionary-en-us": "^2.0.0",
+    "retext-assuming": "^1.0.0",
+    "retext-contractions": "^2.1.2",
+    "retext-diacritics": "^1.2.1",
+    "retext-english": "^3.0.0",
+    "retext-equality": "^3.4.1",
+    "retext-indefinite-article": "^1.1.4",
+    "retext-intensify": "^3.0.1",
+    "retext-passive": "^1.3.0",
+    "retext-profanities": "^4.4.0",
+    "retext-quotes": "^2.0.1",
+    "retext-readability": "^4.2.0",
+    "retext-redundant-acronyms": "^1.2.1",
+    "retext-repeated-words": "^1.2.1",
+    "retext-sentence-spacing": "^2.0.1",
+    "retext-simplify": "^4.1.1",
+    "retext-spell": "^2.3.1",
+    "retext-syntax-mentions": "^1.1.4",
+    "retext-syntax-urls": "^1.0.0"
   },
   "publishConfig": {
     "access": "public"
