--- a/packages/remark-preset/package.json
+++ b/packages/remark-preset/package.json
@@ -38,6 +38,7 @@
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-plugin-ava": "5.1.0",
     "eslint-plugin-babel": "5.1.0",
+    "eslint-plugin-eslint-plugin": "1.4.0",
     "eslint-plugin-flowtype": "2.50.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
