feat: add babel-plugin-preval to babel-preset

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@commitlint/cli": "7.1.2",
     "@commitlint/config-conventional": "7.1.2",
     "@commitlint/config-lerna-scopes": "7.1.2",
+    "circleci-bin": "1.0.0",
     "fixpack": "2.3.1",
     "flow-mono-cli": "1.4.0",
     "greenkeeper-lockfile": "2.5.0",
@@ -70,7 +71,8 @@
     "build:pkgs": "lerna run build",
     "check": "npm-run-all check:self check:pkgs",
     "check:pkgs": "lerna run check",
-    "check:self": "npm-run-all audit:self fixpack:self lint:self",
+    "check:self": "npm-run-all audit:self ci:check fixpack:self",
+    "ci:check": "circleci config validate",
     "ci:postcheck": "greenkeeper-lockfile-upload",
     "ci:precheck": "greenkeeper-lockfile-update",
     "clean": "npm-run-all clean:pkgs clean:self",
