--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,7 @@ jobs:
       - checkout
       - run: yarn
       - run: yarn run install:pkgs
-      - run:
-          command: yarn run build
-          no_output_timeout: 20m
+      - run: yarn run build
       - run: yarn run ci:precheck
       - run: yarn run check
       - run: yarn run ci:postcheck
