--- a/packages/browserslist-config-web_macos/package.json
+++ b/packages/browserslist-config-web_macos/package.json
@@ -28,10 +28,12 @@
     "@babel/plugin-proposal-unicode-property-regex": "7.0.0",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/plugin-syntax-import-meta": "7.0.0",
+    "@babel/plugin-transform-flow-strip-types": "7.0.0",
     "@babel/preset-env": "7.0.0",
     "@babel/preset-flow": "7.0.0",
     "@psirenny/tools": "1.2.0",
     "babel-eslint": "9.0.0",
+    "babel-plugin-preval": "3.0.1",
     "dictionary-en-us": "2.0.0",
     "eslint": "5.5.0",
     "eslint-config-airbnb-base": "13.1.0",
