--- a/packages/babel-preset/package.json
+++ b/packages/babel-preset/package.json
@@ -90,7 +90,7 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/plugin-transform-flow-strip-types": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "babel-plugin-preset": "^3.0.0"
+    "babel-plugin-preval": "^3.0.0"
   },
   "publishConfig": {
     "access": "public"
