--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-markdown": "1.0.0-beta.8",
+    "eslint-plugin-optimize-regex": "1.1.6",
     "fixpack": "2.3.1",
     "flow-bin": "0.80.0",
     "npm-check-updates": "3.0.0-alpha.3",
@@ -104,7 +105,8 @@
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-eslint-plugin": "^1.4.0",
     "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-markdown": "^1.0.0-beta.8"
+    "eslint-plugin-markdown": "^1.0.0-beta.8",
+    "eslint-plugin-optimize-regex": "^1.1.0"
   },
   "publishConfig": {
     "access": "public"
