feat(eslint-config): add tree shaking, comments and array-func plugins
BREAKING CHANGE

--- a/packages/remark-preset/package.json
+++ b/packages/remark-preset/package.json
@@ -37,14 +37,17 @@
     "dictionary-en-us": "2.0.0",
     "eslint": "5.8.0",
     "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-array-func": "3.0.0",
     "eslint-plugin-ava": "5.1.1",
     "eslint-plugin-babel": "5.2.1",
+    "eslint-plugin-eslint-comments": "3.0.1",
     "eslint-plugin-eslint-plugin": "1.4.1",
-    "eslint-plugin-flowtype": "3.1.1",
+    "eslint-plugin-flowtype": "3.1.4",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-markdown": "1.0.0-rc.0",
-    "flow-bin": "0.84.0",
+    "eslint-plugin-tree-shaking": "1.7.3",
+    "flow-bin": "0.85.0",
     "flow-coverage-report": "0.6.0",
     "npm-check-updates": "3.0.0-alpha.3",
     "npm-package-json-lint": "3.4.1",
@@ -128,7 +131,7 @@
   },
   "scripts": {
     "audit": "nsp check",
-    "build": "rollup -c rollup.config.js src/index.js",
+    "build": "rollup -c ../rollup-config_node_tool/src/index.js src/index.js",
     "check": "run-s audit lint typecheck typecheck:cov",
     "clean": "trash **.DS_Store *.log dist dist node_modules",
     "lint": "run-s lint:js lint:md lint:pkg",
