--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -36,15 +36,18 @@
     "dictionary-en-us": "2.0.0",
     "eslint": "5.8.0",
     "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-array-func": "3.0.0",
     "eslint-plugin-ava": "5.1.1",
     "eslint-plugin-babel": "5.2.1",
+    "eslint-plugin-eslint-comments": "3.0.1",
     "eslint-plugin-eslint-plugin": "1.4.1",
-    "eslint-plugin-flowtype": "3.1.1",
+    "eslint-plugin-flowtype": "3.1.4",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-markdown": "1.0.0-rc.0",
     "eslint-plugin-optimize-regex": "1.1.6",
-    "flow-bin": "0.84.0",
+    "eslint-plugin-tree-shaking": "1.7.3",
+    "flow-bin": "0.85.0",
     "flow-coverage-report": "0.6.0",
     "npm-check-updates": "3.0.0-alpha.3",
     "npm-package-json-lint": "3.4.1",
@@ -92,12 +95,16 @@
   "peerDependencies": {
     "babel-eslint": "^9.0.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-array-func": "^3.0.0",
     "eslint-plugin-ava": "^5.1.0",
     "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-eslint-comments": "^3.0.0",
     "eslint-plugin-eslint-plugin": "^1.4.0",
+    "eslint-plugin-filenames": "^1.3.0",
     "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-markdown": "^1.0.0-beta.8",
-    "eslint-plugin-optimize-regex": "^1.1.0"
+    "eslint-plugin-optimize-regex": "^1.1.0",
+    "eslint-plugin-tree-shaking": "^1.7.0"
   },
   "gitHead": "11b63ee7b482365e4b52ca837a5dc6e63adf197b",
   "homepage": "https://github.com/psirenny/monorepo/tree/master/packages/eslint-config",
@@ -121,7 +128,7 @@
   },
   "scripts": {
     "audit": "nsp check",
-    "build": "rollup -c rollup.config.js src/index.js",
+    "build": "rollup -c ../rollup-config_node_tool/src/index.js src/index.js",
     "check": "run-s audit lint typecheck typecheck:cov",
     "clean": "trash **.DS_Store *.log dist node_modules",
     "lint": "run-s lint:js lint:md lint:pkg",
