--- a/packages/rollup-config_node_tool/package.json
+++ b/packages/rollup-config_node_tool/package.json
@@ -1,12 +1,38 @@
 {
-  "name": "@psirenny/babel-preset",
-  "version": "1.3.1",
-  "description": "psirenny's babel preset",
+  "name": "@psirenny/rollup-config_node_tool",
+  "version": "1.0.0",
+  "description": "psirenny's rollup config for node tools",
   "author": "Dennis Torres <djtorres0@gmail.com>",
   "bugs": {
     "url": "https://github.com/psirenny/monorepo/issues"
   },
   "devDependencies": {
+    "@babel/core": "7.1.2",
+    "@babel/plugin-external-helpers": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-proposal-decorators": "7.1.2",
+    "@babel/plugin-proposal-do-expressions": "7.0.0",
+    "@babel/plugin-proposal-export-default-from": "7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "7.0.0",
+    "@babel/plugin-proposal-function-bind": "7.0.0",
+    "@babel/plugin-proposal-function-sent": "7.1.0",
+    "@babel/plugin-proposal-json-strings": "7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-proposal-optional-catch-binding": "7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "7.0.0",
+    "@babel/plugin-proposal-unicode-property-regex": "7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/plugin-syntax-import-meta": "7.0.0",
+    "@babel/plugin-transform-flow-strip-types": "7.0.0",
+    "@babel/preset-env": "7.1.0",
+    "@babel/preset-flow": "7.0.0",
+    "babel-eslint": "10.0.1",
+    "babel-plugin-preval": "3.0.1",
     "dictionary-en-us": "2.0.0",
     "eslint": "5.8.0",
     "eslint-config-airbnb-base": "13.1.0",
@@ -19,7 +45,10 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-markdown": "1.0.0-rc.0",
+    "eslint-plugin-optimize-regex": "1.1.6",
     "eslint-plugin-tree-shaking": "1.7.3",
+    "flow-bin": "0.85.0",
+    "flow-coverage-report": "0.6.0",
     "npm-check-updates": "3.0.0-alpha.3",
     "npm-package-json-lint": "3.4.1",
     "npm-run-all": "4.1.3",
@@ -57,59 +86,48 @@
     "retext-spell": "2.3.1",
     "retext-syntax-mentions": "1.1.4",
     "retext-syntax-urls": "1.0.0",
+    "rollup": "0.66.6",
+    "rollup-plugin-babel": "4.1.0-0",
+    "rollup-plugin-flow-entry": "0.2.0",
     "trash-cli": "1.4.0",
     "unified": "7.0.0"
   },
   "peerDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-do-expressions": "^7.0.0",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-bind": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.0.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-proposal-optional-catch-binding": "^7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-proposal-unicode-property-regex": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-plugin-preval": "^3.0.0"
+    "rollup": "^0.66.0",
+    "rollup-plugin-babel": "^4.1.0",
+    "rollup-plugin-flow-entry": "^0.2.0"
   },
   "gitHead": "11b63ee7b482365e4b52ca837a5dc6e63adf197b",
-  "homepage": "https://github.com/psirenny/monorepo/tree/master/packages/babel-preset",
+  "homepage": "https://github.com/psirenny/monorepo/tree/master/packages/rollup-config_node_tool",
   "keywords": [
-    "babel",
-    "js",
-    "preset",
-    "psirenny"
+    "config",
+    "node",
+    "psirenny",
+    "rollup",
+    "tool"
   ],
   "license": "Unlicense",
-  "main": "src/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/es/index.js",
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/psirenny/monorepo/tree/master/packages/babel-preset"
+    "url": "https://github.com/psirenny/monorepo/tree/master/packages/rollup-config_node_tool"
   },
   "scripts": {
     "audit": "nsp check",
-    "check": "run-s audit lint",
-    "clean": "trash **.DS_Store *.log node_modules",
+    "build": "rollup -c src/index.js src/index.js",
+    "check": "run-s audit lint typecheck typecheck:cov",
+    "clean": "trash **.DS_Store *.log dist node_modules",
     "lint": "run-s lint:js lint:md lint:pkg",
     "lint:js": "eslint . --ext .js,.md",
-    "lint:pkg": "npmPkgJsonLint ./package.json",
     "lint:md": "remark --frail .",
+    "lint:pkg": "npmPkgJsonLint ./package.json",
     "outdated": "ncu -t",
+    "typecheck": "flow .",
+    "typecheck:cov": "flow-coverage-report --config .flowcoveragereportrc",
     "update": "ncu -tu"
   },
   "sideEffects": false
