chore: substitute npm-run-all command with run-s alias

--- a/package.json
+++ b/package.json
@@ -64,32 +64,32 @@
   "private": true,
   "repository": "https://github.com/psirenny/monorepo",
   "scripts": {
-    "audit": "npm-run-all audit:self audit:pkgs",
+    "audit": "run-s audit:self audit:pkgs",
     "audit:pkgs": "lerna run audit",
     "audit:self": "yarn audit",
-    "build": "npm-run-all build:pkgs",
+    "build": "run-s build:pkgs",
     "build:pkgs": "lerna run build",
-    "check": "npm-run-all check:self check:pkgs",
+    "check": "run-s check:self check:pkgs",
     "check:pkgs": "lerna run check",
-    "check:self": "npm-run-all audit:self ci:check lint:self",
+    "check:self": "run-s audit:self ci:check lint:self",
     "ci:check": "circleci config validate",
     "ci:postcheck": "greenkeeper-lockfile-upload",
     "ci:precheck": "greenkeeper-lockfile-update",
-    "clean": "npm-run-all clean:pkgs clean:self",
+    "clean": "run-s clean:pkgs clean:self",
     "clean:pkgs": "lerna run clean",
     "clean:self": "trash **.DS_Store *.log node_modules",
     "flow-fix": "flow-mono create-symlinks ./build/.flowconfig",
-    "install:pkgs": "npm-run-all lerna:bootstrap flow-fix",
+    "install:pkgs": "run-s lerna:bootstrap flow-fix",
     "lerna:bootstrap": "lerna bootstrap",
     "lint:self": "run-s lint:md:self lint:pkg:self",
     "lint:md:self": "remark --frail .",
     "lint:pkg:self": "npmPkgJsonLint ./package.json",
-    "outdated": "npm-run-all outdated:self outdated:pkgs",
+    "outdated": "run-s outdated:self outdated:pkgs",
     "outdated:pkgs": "lerna run outdated",
     "outdated:self": "ncu -t",
     "publish": "lerna publish",
     "release": "lerna version",
-    "update": "npm-run-all update:self update:pkgs",
+    "update": "run-s update:self update:pkgs",
     "update:pkgs": "lerna run update",
     "update:self": "ncu -tu"
   },
