--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -133,7 +133,7 @@
     "lint:md": "remark --frail .",
     "lint:pkg": "npmPkgJsonLint ./package.json",
     "outdated": "updates -gp",
-    "typecheck": "flow .",
+    "typecheck": "flow check .",
     "typecheck:cov": "flow-coverage-report --config .flowcoveragereportrc",
     "update": "updates -gpu"
   },
