--- a/packages/browserslist-config-node/package.json
+++ b/packages/browserslist-config-node/package.json
@@ -121,7 +121,7 @@
     "lint:md": "remark --frail .",
     "lint:pkg": "npmPkgJsonLint ./package.json",
     "outdated": "updates -gp",
-    "typecheck": "flow .",
+    "typecheck": "flow check .",
     "typecheck:cov": "flow-coverage-report --config .flowcoveragereportrc",
     "update": "updates -gpu"
   },
