--- a/packages/browserslist-config-web_macos/package.json
+++ b/packages/browserslist-config-web_macos/package.json
@@ -121,7 +121,7 @@
     "lint:pkg": "npmPkgJsonLint ./package.json",
     "outdated": "updates -gp",
     "typecheck": "flow check .",
-    "typecheck:cov": "flow-coverage-report --config .flowcoveragereportrc",
+    "typecheck:cov": "flow-coverage-report --config .flowcoveragereportrc && flow stop",
     "update": "updates -gpu"
   },
   "sideEffects": false
