--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "@psirenny's monorepo",
   "author": "Dennis Torres <djtorres0@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/psirenny/psirenny/issues"
-  },
+  "bugs": "https://github.com/psirenny/psirenny/issues",
   "devDependencies": {
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
@@ -89,7 +87,5 @@
     "update:pkgs": "lerna run update",
     "update:self": "updates -gpu"
   },
-  "workspaces": [
-    "packages/*"
-  ]
+  "workspaces": ["packages/*"]
 }
