chore: add script to run circle-ci locally

--- a/package.json
+++ b/package.json
@@ -60,21 +60,21 @@
     "audit": "yarn audit",
     "build": "run-s build:pkgs",
     "build:pkgs": "lerna run build",
-    "check": "run-s check:self check:pkgs",
+    "check": "run-s check:root check:pkgs",
     "check:pkgs": "lerna run check",
-    "check:self": "run-s audit:self ci:check lint:self",
-    "ci:check": "circleci config validate",
+    "check:root": "run-s audit lint",
+    "ci:check": "circleci local execute --job build_and_check",
     "ci:postcheck": "greenkeeper-lockfile-upload",
     "ci:precheck": "greenkeeper-lockfile-update",
-    "clean": "run-s clean:pkgs clean:self",
+    "clean": "run-s clean:pkgs clean:root",
     "clean:pkgs": "lerna run clean",
-    "clean:self": "trash **.DS_Store *.log node_modules",
+    "clean:root": "trash **.DS_Store *.log node_modules",
     "flow-fix": "flow-mono create-symlinks ./build/.flowconfig",
     "install:pkgs": "run-s lerna:bootstrap flow-fix",
     "lerna:bootstrap": "lerna bootstrap",
-    "lint:self": "run-s lint:md:self lint:pkg:self",
-    "lint:md:self": "remark --frail .",
-    "lint:pkg:self": "npmPkgJsonLint ./package.json",
+    "lint": "run-s lint:md lint:pkg",
+    "lint:md": "remark --frail .",
+    "lint:pkg": "npmPkgJsonLint ./package.json",
     "outdated": "yarn outdated",
     "publish": "lerna publish",
     "release": "lerna version",
