chore: add flow strict type checking

--- a/packages/retext-preset/.flowconfig
+++ b/packages/retext-preset/.flowconfig
@@ -1,2 +1,24 @@
+[ignore]
+dist
+
 [include]
 flow-typed
+
+[lints]
+all=error
+dynamic-export=off
+untyped-import=off
+
+[options]
+experimental.const_params=true
+esproposal.export_star_as=enable
+esproposal.nullish_coalescing=enable
+esproposal.optional_chaining=enable
+include_warnings=true
+
+[strict]
+sketchy-null
+unclear-type
+unsafe-getters-setters
+untyped-import
+untyped-type-import
