--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "author": "Dennis Torres <djtorres0@gmail.com>",
   "bugs": "https://github.com/psirenny/monorepo/issues",
   "devDependencies": {
-    "@commitlint/cli": "7.3.2",
-    "@commitlint/config-conventional": "7.3.1",
-    "@commitlint/config-lerna-scopes": "7.3.1",
-    "circleci-bin": "1.1.4",
+    "@commitlint/cli": "7.5.2",
+    "@commitlint/config-conventional": "7.5.0",
+    "@commitlint/config-lerna-scopes": "7.5.1",
+    "circleci-bin": "1.1.7",
     "flow-mono-cli": "1.4.3",
     "greenkeeper-lockfile": "2.8.0",
     "husky": "1.3.1",
-    "lerna": "3.10.5",
-    "npm-package-json-lint": "3.4.1",
+    "lerna": "3.13.1",
+    "npm-package-json-lint": "3.6.0",
     "npm-run-all": "4.1.5",
     "remark-cli": "6.0.1",
     "remark-lint-blockquote-indentation": "1.0.2",
@@ -34,7 +34,7 @@
     "retext-contractions": "2.1.3",
     "retext-diacritics": "1.2.2",
     "retext-english": "3.0.2",
-    "retext-equality": "3.8.0",
+    "retext-equality": "3.9.1",
     "retext-indefinite-article": "1.1.5",
     "retext-intensify": "3.0.2",
     "retext-passive": "1.3.2",
@@ -52,7 +52,10 @@
     "unified": "7.1.0"
   },
   "homepage": "https://github.com/psirenny/monorepo",
-  "keywords": ["monorepo", "psirenny"],
+  "keywords": [
+    "monorepo",
+    "psirenny"
+  ],
   "license": "Unlicense",
   "private": true,
   "repository": "https://github.com/psirenny/monorepo",
@@ -80,5 +83,7 @@
     "release": "lerna version",
     "update": "yarn upgrade-interactive --latest"
   },
-  "workspaces": ["packages/*"]
+  "workspaces": [
+    "packages/*"
+  ]
 }
