--- a/packages/babel-preset/package.json
+++ b/packages/babel-preset/package.json
@@ -6,18 +6,18 @@
   "bugs": "https://github.com/psirenny/monorepo/issues",
   "devDependencies": {
     "dictionary-en-us": "2.0.0",
-    "eslint": "5.12.0",
+    "eslint": "5.15.0",
     "eslint-config-airbnb-base": "13.1.0",
-    "eslint-plugin-array-func": "3.1.2",
+    "eslint-plugin-array-func": "3.1.3",
     "eslint-plugin-ava": "5.1.1",
     "eslint-plugin-babel": "5.3.0",
-    "eslint-plugin-eslint-comments": "3.0.1",
+    "eslint-plugin-eslint-comments": "3.1.1",
     "eslint-plugin-eslint-plugin": "2.0.1",
-    "eslint-plugin-flowtype": "3.2.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-markdown": "1.0.0-beta.1",
-    "npm-package-json-lint": "3.4.1",
+    "eslint-plugin-flowtype": "3.4.2",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-markdown": "1.0.0",
+    "npm-package-json-lint": "3.6.0",
     "npm-run-all": "4.1.5",
     "remark-cli": "6.0.1",
     "remark-lint-blockquote-indentation": "1.0.2",
@@ -38,7 +38,7 @@
     "retext-contractions": "2.1.3",
     "retext-diacritics": "1.2.2",
     "retext-english": "3.0.2",
-    "retext-equality": "3.8.0",
+    "retext-equality": "3.9.1",
     "retext-indefinite-article": "1.1.5",
     "retext-intensify": "3.0.2",
     "retext-passive": "1.3.2",
