--- a/packages/dictionary/package.json
+++ b/packages/dictionary/package.json
@@ -44,7 +44,6 @@
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-markdown": "1.0.0",
     "flow-bin": "0.94.0",
-    "flow-coverage-report": "0.6.1",
     "npm-package-json-lint": "3.6.0",
     "npm-run-all": "4.1.5",
     "remark-cli": "6.0.1",
@@ -109,7 +108,7 @@
   "scripts": {
     "audit": "yarn audit",
     "build": "rollup -c",
-    "check": "run-s audit lint typecheck typecheck:cov",
+    "check": "run-s audit lint typecheck",
     "clean": "trash **.DS_Store *.log dist node_modules",
     "lint": "run-s lint:js lint:md lint:pkg",
     "lint:js": "eslint . --ext .js,.md",
@@ -117,7 +116,6 @@
     "lint:pkg": "npmPkgJsonLint ./package.json",
     "outdated": "yarn outdated",
     "typecheck": "flow check .",
-    "typecheck:cov": "flow-coverage-report --config .flowcoveragereportrc && flow stop",
     "update": "yarn upgrade-interactive --latest"
   },
   "sideEffects": false
