chore: update dependencies and switch from "es" to "esm"

--- a/packages/babel-preset/.npmpackagejsonlintrc.json
+++ b/packages/babel-preset/.npmpackagejsonlintrc.json
@@ -1,6 +1,3 @@
 {
-  "extends": "@psirenny/npm-package-json-lint-config",
-  "rules": {
-    "require-module": "off"
-  }
+  "extends": "@psirenny/npm-package-json-lint-config"
 }
