--- a/packages/retext-preset/package.json
+++ b/packages/retext-preset/package.json
@@ -35,7 +35,7 @@
     "babel-eslint": "10.0.1",
     "babel-plugin-preval": "3.0.1",
     "dictionary-en-us": "2.0.0",
-    "eslint": "5.15.0",
+    "eslint": "5.15.1",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-plugin-array-func": "3.1.3",
     "eslint-plugin-ava": "5.1.1",
@@ -82,7 +82,7 @@
     "retext-spell": "2.4.0",
     "retext-syntax-mentions": "1.1.5",
     "retext-syntax-urls": "1.0.1",
-    "rollup": "1.4.0",
+    "rollup": "1.6.0",
     "rollup-plugin-babel": "5.0.0-alpha.0",
     "rollup-plugin-flow-entry": "0.3.1",
     "trash-cli": "1.4.0",
@@ -123,7 +123,7 @@
   ],
   "license": "Unlicense",
   "main": "dist/cjs/index.js",
-  "module": "dist/es/index.js",
+  "module": "dist/esm/index.js",
   "publishConfig": {
     "access": "public"
   },
