--- a/packages/graphql-schema-linter-config/package.json
+++ b/packages/graphql-schema-linter-config/package.json
@@ -103,10 +103,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/psirenny/monorepo/tree/master/packages/graphql-schema-linter-config"
-  },
+  "repository": "github:psirenny/monorepo/tree/master/packages/graphql-schema-linter-config",
   "scripts": {
     "audit": "yarn audit",
     "build": "rollup -c",
