--- a/packages/npm-package-json-lint-config/package.json
+++ b/packages/npm-package-json-lint-config/package.json
@@ -104,10 +104,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/psirenny/monorepo/tree/master/packages/npm-package-json-lint-config"
-  },
+  "repository": "github:psirenny/monorepo/tree/master/packages/npm-package-json-lint-config",
   "scripts": {
     "audit": "yarn audit",
     "build": "rollup -c",
