--- a/packages/babel-preset/package.json
+++ b/packages/babel-preset/package.json
@@ -97,10 +97,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/psirenny/monorepo/tree/master/packages/babel-preset"
-  },
+  "repository": "github:psirenny/monorepo/tree/master/packages/babel-preset",
   "scripts": {
     "audit": "yarn audit",
     "build": "rollup -c",
